Attempt 2 at fixing address bar layout bug.

--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ html {
     scrollbar-width: none;  /* Firefox */  
     color: hsl(35, 100%, 90%);
     scroll-behavior: smooth;
+    height: 100%;
+}
+
+body {
+  height: 100%;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
